src/objects/GSEM_Token__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>access_token1__c</fullName>
        <label>access_token1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>access_token2__c</fullName>
        <label>access token2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_token3__c</fullName>
        <label>access token3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expires__c</fullName>
        <label>expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>issued__c</fullName>
        <label>issued</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>refresh_token__c</fullName>
        <label>refresh_token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>role__c</fullName>
        <label>role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token_type__c</fullName>
        <label>token_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <label>userName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSEM Token</label>
</CustomObject>